Rework editor and add opengl (broken)